webapp/src/main/webapp/resources/css/advanced-search-clinic.css
:root {
    --main-font: Roboto, sans-serif;
}


html, body {
    margin: 0;
    height: 100%;
    overflow: auto;
}

body {
    font-family: var(--main-font);
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    color: #212529;
    text-align: left;
    background-color: #212121;
}

.main-container {
    position: relative;
    background: white;
    background-size: cover;

    height: 100vh;
    top: 0;
    padding-top: 4.5rem;
}


@keyframes fadeIn {
    0% {
        opacity: 0;
        font-size: 1.5rem;
    }
    100% {
        opacity: 1;
        font-size: 1.25rem;
    }
}

@keyframes slideInFromDown {
    0% {
        opacity: 0;
        transform: translateY(15%);
    }
    100% {
        opacity: 1;
        transform: translateX(0);
    }
}

.filters-card {
    margin-top: 2em;
    margin-bottom: 2em;
    width: 30em;
    box-shadow: 0 0 20px rgba(65, 65, 65, 0.75);
    padding: 10px;


    animation: 0.75s ease-out 0s 1 slideInFromDown;
}
.table-scrollable {
    height: 100px;
    overflow-y: auto;
}
.type-title {
    font-weight: normal;
    margin-bottom: 0;
}
.type {
    margin-bottom: 0.75rem;
    font-weight: lighter;
}
.results-card {
    margin-top: 2em;
    width: 50em;
    box-shadow: 0 0 20px rgba(65, 65, 65, 0.75);
    padding: 10px;
    min-height:42em;
    margin-bottom: 2em;

    animation: 0.75s ease-out 0s 1 slideInFromDown;
}
.result-section {
    width: 20em;
}
.data-section {
    width: 30em;
    margin-left: 2em;
}
.time-input {
    width: 80px;
}
.action-btn{
    background: #009688;
    color: white;
    margin-top: 4%;
    width: 50%;
}
.reset-btn{
    background: slategrey;
    color: white;

    margin-top: 4%;
    width: 50%;
}

